fixed slight site movement when changing pages, added y overflow rule

--- a/lab1.css
+++ b/lab1.css
@@ -4,6 +4,10 @@
     margin: 0; 
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
     font-family: "Poppins", sans-serif;
     
@@ -109,8 +113,6 @@ nav ul li a:hover, nav ul li a:focus {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, auto);
-  border: 3px solid orange;
-  min-height: 400px; 
 
 } 
 
